--- a/Nalissa Narine/style.css
+++ b/Nalissa Narine/style.css
@@ -8,6 +8,6 @@ html, body {
 canvas {
   display: block;
 }
-#____________, #___________ input, button {
+#cat, #cat input, button {
 	font-size: 120%;
 }
